--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@nextui-org/theme": "2.1.17",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.6",
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.15.19",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -37,6 +39,7 @@
     "react-dom": "18.2.0",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
+    "three": "^0.162.0",
     "typescript": "5.0.4"
   }
 }
