--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/button": "2.0.26",
     "@nextui-org/code": "2.0.24",
+    "@nextui-org/image": "^2.0.28",
     "@nextui-org/input": "2.1.16",
     "@nextui-org/kbd": "2.0.25",
     "@nextui-org/link": "2.0.26",
@@ -35,6 +36,7 @@
     "intl-messageformat": "^10.5.0",
     "next": "^14.2.3",
     "next-themes": "^0.2.1",
+    "next-ui": "^0.9.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
